@startuml

title __FXCOP's Class Diagram__\n

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace fxcop {
          class edu.hm.hafner.analysis.parser.fxcop.FxCopParser {
              {static} - serialVersionUID : long
              + parse()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace fxcop {
          class edu.hm.hafner.analysis.parser.fxcop.FxCopParser.XmlParser {
              + parse()
              - getString()
              - parseAccessors()
              - parseIssue()
              - parseMember()
              - parseMembers()
              - parseMessages()
              - parseModules()
              - parseNamespaces()
              - parseResources()
              - parseRules()
              - parseTargets()
              - parseTypes()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace fxcop {
          class edu.hm.hafner.analysis.parser.fxcop.FxCopRule {
              - category : String
              - checkId : String
              - description : String
              - name : String
              - typeName : String
              - url : String
              + FxCopRule()
              + getCategory()
              + getCheckId()
              + getDescription()
              + getName()
              + getTypeName()
              + getUrl()
              + setDescription()
              + setName()
              + setUrl()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace fxcop {
          class edu.hm.hafner.analysis.parser.fxcop.FxCopRuleSet {
              - rules : Map<String, FxCopRule>
              + addRule()
              + contains()
              + getRule()
              - getNamedTagText()
              - getRuleKey()
          }
        }
      }
    }
  }
  

  edu.hm.hafner.analysis.parser.fxcop.FxCopParser -up-|> edu.hm.hafner.analysis.IssueParser
  edu.hm.hafner.analysis.parser.fxcop.FxCopParser +-down- edu.hm.hafner.analysis.parser.fxcop.FxCopParser.XmlParser
  edu.hm.hafner.analysis.parser.fxcop.FxCopParser.XmlParser o-- edu.hm.hafner.analysis.parser.fxcop.FxCopRuleSet : ruleSet
  edu.hm.hafner.analysis.parser.fxcop.FxCopParser.XmlParser o-- edu.hm.hafner.analysis.Report : warnings


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
